--- a/campusdrive.html
+++ b/campusdrive.html
@@ -49,7 +49,7 @@
         </div>
 
         <div class="contact-social">
-          <div class="phone">
+          <!-- <div class="phone">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="16"
@@ -67,7 +67,7 @@
               ></path>
             </svg>
             0853-2250125
-          </div>
+          </div> -->
           <div class="social-icons">
             <a href="#" title="Facebook">
               <svg
@@ -381,7 +381,7 @@
                   </div>
                 </div>
               </div>
-
+<!-- 
               <div class="contact-item">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -397,7 +397,7 @@
                   ></path>
                 </svg>
                 <p>05273-252012</p>
-              </div>
+              </div> -->
 
               <div class="contact-item">
                 <svg
