--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@
                 </div>
               </div>
 
-              <div class="contact-item">
+              <!-- <div class="contact-item">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   viewBox="0 0 24 24"
@@ -608,7 +608,7 @@
                   ></path>
                 </svg>
                 <p>05273-252012</p>
-              </div>
+              </div> -->
 
               <div class="contact-item">
                 <svg
