--- a/feedback.html
+++ b/feedback.html
@@ -44,7 +44,7 @@
         </div>
 
         <div class="contact-social">
-          <div class="phone">
+          <!-- <div class="phone">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="16"
@@ -62,7 +62,7 @@
               ></path>
             </svg>
             0853-2250125
-          </div>
+          </div> -->
           <div class="social-icons">
             <a href="#" title="Facebook">
               <svg
@@ -428,7 +428,7 @@
                   </div>
                 </div>
               </div>
-
+<!-- 
               <div class="contact-item">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -444,7 +444,7 @@
                   ></path>
                 </svg>
                 <p>05273-252012</p>
-              </div>
+              </div> -->
 
               <div class="contact-item">
                 <svg
