--- a/mechanical.html
+++ b/mechanical.html
@@ -45,7 +45,7 @@
         </div>
 
         <div class="contact-social">
-          <div class="phone">
+          <!-- <div class="phone">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="16"
@@ -63,7 +63,7 @@
               ></path>
             </svg>
             0853-2250125
-          </div>
+          </div> -->
           <div class="social-icons">
             <a href="#" title="Facebook">
               <svg
@@ -681,7 +681,7 @@
                   </div>
                 </div>
               </div>
-
+<!-- 
               <div class="contact-item">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -697,7 +697,7 @@
                   ></path>
                 </svg>
                 <p>05273-252012</p>
-              </div>
+              </div> -->
 
               <div class="contact-item">
                 <svg
