--- a/syllabus.html
+++ b/syllabus.html
@@ -48,7 +48,7 @@
         </div>
 
         <div class="contact-social">
-          <div class="phone">
+          <!-- <div class="phone">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="16"
@@ -66,7 +66,7 @@
               ></path>
             </svg>
             0853-2250125
-          </div>
+          </div> -->
           <div class="social-icons">
             <a href="#" title="Facebook">
               <svg
@@ -1116,7 +1116,7 @@
                   </div>
                 </div>
               </div>
-
+<!-- 
               <div class="contact-item">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -1132,7 +1132,7 @@
                   ></path>
                 </svg>
                 <p>05273-252012</p>
-              </div>
+              </div> -->
 
               <div class="contact-item">
                 <svg
