--- a/listofHolidays.html
+++ b/listofHolidays.html
@@ -1152,7 +1152,7 @@
               <li><a href="#">Cultural Programme</a></li>
               <li><a href="#">Sports & Games</a></li>
               <li><a href="#">News & Events</a></li>
-              <li><a href="#">NCC</a></li>
+              <!-- <li><a href="#">NCC</a></li> -->
             </ul>
           </div>
 
