--- a/academicprogrammes.html
+++ b/academicprogrammes.html
@@ -1160,7 +1160,7 @@
               <li><a href="#">Cultural Programme</a></li>
               <li><a href="#">Sports & Games</a></li>
               <li><a href="#">News & Events</a></li>
-              <li><a href="#">NCC</a></li>
+              <!-- <li><a href="#">NCC</a></li> -->
             </ul>
           </div>
 
