--- a/feedback.html
+++ b/feedback.html
@@ -228,7 +228,7 @@
               <a href="/campusdrive.html">Campus Drive</a>
             </div>
           </li>
-          <li><a href="#">Alumni</a></li>
+          <li><a href="/alumni.html">Alumni</a></li>
           <li>
             <a href="#">Contact us</a>
             <div class="dropdown-content">
