--- a/mission.html
+++ b/mission.html
@@ -224,7 +224,7 @@
               <a href="/campusdrive.html">Campus Drive</a>
             </div>
           </li>
-          <li><a href="#">Alumni</a></li>
+          <li><a href="/alumni.html">Alumni</a></li>
           <li><a href="#">Contact us</a>
             <div class="dropdown-content">
               <a href="/address.html">Address</a>
