--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <!-- Official 5 -->
             <div class="official-card">
               <div class="official-image">
-                <img src="#" alt="Convener">
+                <img src="images/principal.jpg" alt="Convener">
               </div>
               <div class="official-details">
                 <h4>Principal</h4>
