--- a/index.html
+++ b/index.html
@@ -255,6 +255,8 @@
               <a href="/mechanical.html">Mechanical Engineering</a>
               <a href="/electrical.html">Electrical Engineering</a>
               <a href="/applied.html">Applied Department</a>
+                            <a href="/workshop.html">Electrical Engineering</a>
+              <a href="/office.html">Applied Department</a>
             </div>
           </li>
           <li>
