--- a/principle.html
+++ b/principle.html
@@ -206,6 +206,8 @@
               <a href="/mechanical.html">Mechanical Engineering(PRODUCTION)</a>
               <a href="/electical.html">Electrical Engineering</a>
               <a href="/applied.html">Applied Department</a>
+                            <a href="/workshop.html">Electrical Engineering</a>
+              <a href="/office.html">Applied Department</a>
             </div>
           </li>
           <li>
@@ -356,7 +358,7 @@
   <div class="tab-pane active" id="principal">
     <div class="principal-content">
       <div class="principal-photo">
-        <img src="images/up.png" alt="Signature" />
+        <img src="images/principal.jpg" alt="Signature" />
       </div>
       <div class="principal-message">
         <div class="message-header">
