--- a/mechanical.html
+++ b/mechanical.html
@@ -228,6 +228,8 @@
               <a href="/campus.html">Campus Facilities</a>
               <a href="/hostels.html">Hostels</a>
               <a href="/security&welfare.html">Security & Welfare</a>
+                            <a href="/workshop.html">Electrical Engineering</a>
+              <a href="/office.html">Applied Department</a>
             </div>
           </li>
           <li>
