--- a/phoneDirectory.html
+++ b/phoneDirectory.html
@@ -210,6 +210,8 @@
               <a href="/mechanical.html">Mechanical Engineering(PRODUCTION)</a>
               <a href="/electical.html">Electrical Engineering</a>
               <a href="/applied.html">Applied Department</a>
+                            <a href="/workshop.html">Electrical Engineering</a>
+              <a href="/office.html">Applied Department</a>
             </div>
           </li>
           <li>
