--- a/civil.html
+++ b/civil.html
@@ -219,7 +219,7 @@
               <a href="/mechanical.html">Mechanical Engineering(PRODUCTION)</a>
               <a href="/electical.html">Electrical Engineering</a>
               <a href="/applied.html">Applied Department</a>
-                            <a href="/workshop.html">Electrical Engineering</a>
+              <a href="/workshop.html">Workshop Department</a>
               <a href="/office.html">Applied Department</a>
             </div>
           </li>
@@ -424,6 +424,28 @@
                   <!-- <p><strong>Phone:</strong> +91 6388458630</p> -->
                 </div>
                 <button class="view-profile-btn" data-id="fac102">
+                  View Profile
+                </button>
+              </div>
+            </div>
+
+
+                        <div class="faculty-card">
+              <div class="faculty-image">
+                <img
+                  src="images/mechanical/bhaskar.jpg"
+                  alt="Faculty Member"
+                />
+              </div>
+              <div class="faculty-info">
+                <h3>Mr. Abdullah Ansari</h3>
+                <p class="faculty-designation">Lecturer Mechanical</p>
+                <p class="faculty-qualification">BE(Mechanical Engineeeing)</p>
+                <div class="faculty-contact">
+                  <p><strong>Email:</strong> 2255abdullahalig@gmail.com</p>
+                  <!-- <p><strong>Phone:</strong> +91 7275343235</p> -->
+                </div>
+                <button class="view-profile-btn" data-id="fac101">
                   View Profile
                 </button>
               </div>
