--- a/electical.html
+++ b/electical.html
@@ -209,7 +209,7 @@
                 <a href="/mechanical.html">Mechanical Engineering(PRODUCTION)</a>
                 <a href="/electical.html">Electrical Engineering</a>
                 <a href="/applied.html">Applied Department</a>
-                              <a href="/workshop.html">Electrical Engineering</a>
+                <a href="/workshop.html">Workshop Engineering</a>
               <a href="/office.html">Applied Department</a>
             </div>
           </li>
