--- a/mechanical.html
+++ b/mechanical.html
@@ -219,6 +219,8 @@
               <a href="/mechanical.html">Mechanical Engineering(PRODUCTION)</a>
               <a href="/electical.html">Electrical Engineering</a>
               <a href="/applied.html">Applied Department</a>
+              <a href="/workshop.html">Workshop Department</a>
+              <a href="/office.html">Applied Department</a>
             </div>
           </li>
           <li>
@@ -228,8 +230,7 @@
               <a href="/campus.html">Campus Facilities</a>
               <a href="/hostels.html">Hostels</a>
               <a href="/security&welfare.html">Security & Welfare</a>
-                            <a href="/workshop.html">Electrical Engineering</a>
-              <a href="/office.html">Applied Department</a>
+
             </div>
           </li>
           <li>
