--- a/applied.html
+++ b/applied.html
@@ -29,7 +29,9 @@
             ></path>
             <polyline points="22,6 12,13 2,6"></polyline>
           </svg>
-          <a href="mailto:gpbhitiprincipal@gmail.com">gpbhitiprincipal@gmail.com</a>
+          <a href="mailto:gpbhitiprincipal@gmail.com"
+            >gpbhitiprincipal@gmail.com</a
+          >
         </div>
 
         <div class="language-container">
@@ -180,8 +182,16 @@
           <li>
             <a href="#">AICTE</a>
             <div class="dropdown-content">
-              <a target="_blank" href="https://www.aicte-india.org/bureaus/approval/approval-process-2025-26">Approvals</a>
-              <a target="_blank" href="https://aicte-india.org/bureaus/administration/rules-regulations">Guidelines</a>
+              <a
+                target="_blank"
+                href="https://www.aicte-india.org/bureaus/approval/approval-process-2025-26"
+                >Approvals</a
+              >
+              <a
+                target="_blank"
+                href="https://aicte-india.org/bureaus/administration/rules-regulations"
+                >Guidelines</a
+              >
               <!-- <a href="#">Mandatory Disclosures</a> -->
             </div>
           </li>
@@ -205,12 +215,12 @@
           <li>
             <a href="#">Departments</a>
             <div class="dropdown-content">
-                <a href="/civil.html">Civil Engineering</a>
-                <a href="/mechanical.html">Mechanical Engineering(PRODUCTION)</a>
-                <a href="/electical.html">Electrical Engineering</a>
-                <a href="/applied.html">Applied Department</a>
-                <a href="/workshop.html">Workshop Engineering</a>
-                <a href="/office.html">Office Department</a>
+              <a href="/civil.html">Civil Engineering</a>
+              <a href="/mechanical.html">Mechanical Engineering(PRODUCTION)</a>
+              <a href="/electical.html">Electrical Engineering</a>
+              <a href="/applied.html">Applied Department</a>
+              <a href="/workshop.html">Workshop Engineering</a>
+              <a href="/office.html">Office Department</a>
             </div>
           </li>
           <li>
@@ -230,14 +240,15 @@
             </div>
           </li>
           <li><a href="/alumni.html">Alumni</a></li>
-          <li><a href="#">Contact us</a>
+          <li>
+            <a href="#">Contact us</a>
             <div class="dropdown-content">
-                <a href="/address.html">Address</a>
-                <a href="/mapLocation.html">Maps & Location</a>
-                <a href="/phoneDirectory.html">Phone Directory</a>
-                <a href="/feedback.html">Feedback/Query</a>
-              </div>
-        </li>
+              <a href="/address.html">Address</a>
+              <a href="/mapLocation.html">Maps & Location</a>
+              <a href="/phoneDirectory.html">Phone Directory</a>
+              <a href="/feedback.html">Feedback/Query</a>
+            </div>
+          </li>
         </ul>
       </div>
     </section>
@@ -249,9 +260,7 @@
       </div>
 
       <div class="department-tabs">
-        <button class="dept-tab " data-dept="civil">
-          Civil Engineering
-        </button>
+        <button class="dept-tab" data-dept="civil">Civil Engineering</button>
         <button class="dept-tab" data-dept="mechanical">
           Mechanical Engineering(Production)
         </button>
@@ -265,11 +274,9 @@
 
       <div class="faculty-container">
         <!-- Civil Engineering Faculty -->
-        <div class="faculty-pane " id="civil">
+        <div class="faculty-pane" id="civil">
           <div class="faculty-grid">
-
-
-                        <div class="faculty-card">
+            <div class="faculty-card">
               <div class="faculty-image">
                 <img src="images/civil/" alt="Faculty Member" />
               </div>
@@ -291,10 +298,7 @@
             <!-- Faculty Card 1 -->
             <div class="faculty-card">
               <div class="faculty-image">
-                <img
-                  src="images/civil/amitsingh.jpg"
-                  alt="Faculty Member"
-                />
+                <img src="images/civil/amitsingh.jpg" alt="Faculty Member" />
               </div>
               <div class="faculty-info">
                 <h3>Mr. Amit Singh</h3>
@@ -315,10 +319,7 @@
             <!-- Faculty Card 2 -->
             <div class="faculty-card">
               <div class="faculty-image">
-                <img
-                  src="images/civil/sateyendra.jpg"
-                  alt="Faculty Member"
-                />
+                <img src="images/civil/sateyendra.jpg" alt="Faculty Member" />
               </div>
               <div class="faculty-info">
                 <h3>Mr. Satyendra Pratap Singh</h3>
@@ -363,9 +364,7 @@
         <!-- Mechanical Engineering Faculty -->
         <div class="faculty-pane" id="mechanical">
           <div class="faculty-grid">
-
-
-                        <div class="faculty-card">
+            <div class="faculty-card">
               <div class="faculty-image">
                 <img src="images/mechanical/nandini.jpg" alt="Faculty Member" />
               </div>
@@ -405,8 +404,6 @@
                 </button>
               </div>
             </div>
-
-
 
             <div class="faculty-card">
               <div class="faculty-image">
@@ -467,6 +464,24 @@
                 <p class="faculty-qualification">BTech</p>
                 <div class="faculty-contact">
                   <p><strong>Email:</strong> ashurajmmmec@gmail.com</p>
+                  <!-- <p><strong>Phone:</strong> +91 6388458630</p> -->
+                </div>
+                <button class="view-profile-btn" data-id="fac102">
+                  View Profile
+                </button>
+              </div>
+            </div>
+
+            <div class="faculty-card">
+              <div class="faculty-image">
+                <img src="images/mechanical/bhaskar.jpg" alt="Faculty Member" />
+              </div>
+              <div class="faculty-info">
+                <h3>Mr. Bhashkar Chaubey</h3>
+                <p class="faculty-designation">Lecturer Mechanical</p>
+                <p class="faculty-qualification">BTech</p>
+                <div class="faculty-contact">
+                  <p><strong>Email:</strong> arkbchaubey@gmail.com</p>
                   <!-- <p><strong>Phone:</strong> +91 6388458630</p> -->
                 </div>
                 <button class="view-profile-btn" data-id="fac102">
@@ -547,10 +562,7 @@
 
             <div class="faculty-card">
               <div class="faculty-image">
-                <img
-                  src="images/electrical/"
-                  alt="Faculty Member"
-                />
+                <img src="images/electrical/" alt="Faculty Member" />
               </div>
               <div class="faculty-info">
                 <h3>Mr. Rakesh</h3>
@@ -596,10 +608,7 @@
             <!-- Faculty Card 1 -->
             <div class="faculty-card">
               <div class="faculty-image">
-                <img
-                  src="images/applied/awani.png"
-                  alt="Faculty Member"
-                />
+                <img src="images/applied/awani.png" alt="Faculty Member" />
               </div>
               <div class="faculty-info">
                 <h3>Mrs. Awani kumari</h3>
@@ -618,10 +627,7 @@
             <!-- Faculty Card 2 -->
             <div class="faculty-card">
               <div class="faculty-image">
-                <img
-                  src="images/applied/manojkumar.jpg"
-                  alt="Faculty Member"
-                />
+                <img src="images/applied/manojkumar.jpg" alt="Faculty Member" />
               </div>
               <div class="faculty-info">
                 <h3>Mr. Manoj Kumar Jaiswal</h3>
@@ -689,14 +695,12 @@
                   <h4>GOVERNMENT POLYTECHNIC BAIJPUR BHITI</h4>
                   <div>
                     <p>
-                      <strong
-                        >Baijpur Bhiti, Ambedkarnagar - 224151</strong
-                      >
+                      <strong>Baijpur Bhiti, Ambedkarnagar - 224151</strong>
                     </p>
                   </div>
                 </div>
               </div>
-<!-- 
+              <!-- 
               <div class="contact-item">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
