--- a/civil.html
+++ b/civil.html
@@ -406,6 +406,25 @@
               </div>
             </div>
 
+
+                        <div class="faculty-card">
+              <div class="faculty-image">
+                <img src="images/mechanical/bhaskar.jpg" alt="Faculty Member" />
+              </div>
+              <div class="faculty-info">
+                <h3>Mr. Bhashkar Chaubey</h3>
+                <p class="faculty-designation">Lecturer Mechanical</p>
+                <p class="faculty-qualification">BTech</p>
+                <div class="faculty-contact">
+                  <p><strong>Email:</strong> arkbchaubey@gmail.com</p>
+                  <!-- <p><strong>Phone:</strong> +91 6388458630</p> -->
+                </div>
+                <button class="view-profile-btn" data-id="fac102">
+                  View Profile
+                </button>
+              </div>
+            </div>
+
             <!-- faculty card 3-->
 
             <div class="faculty-card">
