--- a/electical.html
+++ b/electical.html
@@ -643,7 +643,7 @@
                 />
               </div>
               <div class="faculty-info">
-                <h3>Mr. Manoj Kumar Jaiswal</h3>
+                <h3>Dr. Manoj Kumar Jaiswal</h3>
                 <p class="faculty-designation">Lecturer Physics</p>
                 <p class="faculty-qualification">M.Sc. , Ph.D , NET</p>
                 <div class="faculty-contact">
@@ -666,7 +666,7 @@
               <div class="faculty-info">
                 <h3>Mr. Ritesh Kumar Vishwakarma</h3>
                 <p class="faculty-designation">Lecturer Communication</p>
-                <p class="faculty-qualification">M.A.</p>
+                <p class="faculty-qualification">M.A. , JRF</p>
                 <div class="faculty-contact">
                   <p><strong>Email:</strong> riteshsmith1@gmail.com</p>
                   <!-- <p><strong>Phone:</strong> +91 9336814849</p> -->
