--- a/alumni.html
+++ b/alumni.html
@@ -292,6 +292,8 @@
                   <label for="passoutYear">Passout Year*</label>
                   <select id="passoutYear" name="passoutYear" required>
                     <option value="">Select Year</option>
+                    <option value="2023">2025</option>
+                    <option value="2023">2024</option>
                     <option value="2023">2023</option>
                     <option value="2022">2022</option>
                     <option value="2021">2021</option>
