--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
         </div>
 <div class="notice-content" style="width: 100%; height: 500px; overflow: hidden;">
   <iframe 
-    src="notice.pdf"
+    src="hostelNotice.pdf"
     style="width: 100%; height: 100%; border: none; overflow: hidden;" 
     scrolling="no">
   </iframe>
