--- a/index.html
+++ b/index.html
@@ -422,20 +422,28 @@
         </div>
       </div>
 
-      <div class="notice-section">
-        <div class="notice-header">
-          <h3>NOTICE BOARD</h3>
-          <a href="#" class="view-all">VIEW ALL NOTICE</a>
-        </div>
-<div class="notice-content" style="width: 100%; height: 500px; overflow: hidden;">
-  <iframe 
-    src="hostelNotice.pdf"
-    style="width: 100%; height: 100%; border: none; overflow: hidden;" 
-    scrolling="no">
-  </iframe>
+<div class="notice-section">
+  <div class="notice-header">
+    <h3>NOTICE BOARD</h3>
+    <a href="oldnotices.html" class="view-all">VIEW ALL NOTICES</a>
+  </div>
+
+  <div class="notice-content">
+    <ul class="notice-list" style="list-style: none;">
+      <li>
+        <a href="admissionnotice.pdf" target="_blank" download>
+          Admission Notice - 2025
+        </a>
+      </li>
+      <li>
+        <a href="hostelNotice.pdf" target="_blank" download>
+          Hostel Notice - July 2025
+        </a>
+      </li>
+    </ul>
+  </div>
 </div>
 
-      </div>
     </div>
 
     <!-- Departments Section -->
